feat: Event, Newsletter 엔티티 관계 재설정 (#96)